--- a/client/src/components/sign-up/sign-up.styles.scss
+++ b/client/src/components/sign-up/sign-up.styles.scss
@@ -2,6 +2,26 @@
   display: flex;
   flex-direction: column;
   width: 380px;
+  @media (max-width:800px) {
+    width: 300px;
+    margin-top: 50px;
+    .title {
+      font-size: 24px;
+    }
+  }
+    @media (max-width:800px) {
+    justify-content: space-around;
+    button {
+      margin: 0 10px;
+      padding: 0;
+      font-size: 12px;
+      transform: scale(.75);
+    }
+    .sign-up-button {
+      display: flex;
+      justify-content: center;
+    }
+  }
   .title {
     margin: 10px 0;
   }
