--- a/client/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
+++ b/client/src/pages/sign-in-and-sign-up/sign-in-and-sign-up.styles.scss
@@ -3,4 +3,8 @@
   display: flex;
   justify-content: space-between;
   margin: 30px auto;
+  @media (max-width:800px) {
+    width: 300px;
+    flex-direction: column;
+  }
 }
